--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-    <nav id="navbar">
+    <!-- <nav id="navbar">
         <div class="container">
             <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
             <ul>
@@ -22,8 +22,19 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <div id="mainpage">
+            <nav id="navbar">
+                    <div class="container">
+                        <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
+                        <ul>
+                            <li><a class="current" href="#">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
         <div class="container">
             <div class="mainpage-content">
                 <h1> <span class="text-primary">Innovative</span> Development</h1>
@@ -31,7 +42,6 @@
                 <a class="button" href="services.html">Learn More</a>
             </div>
         </div>
-
     </div>
     </header>
 
