--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </div>
     </nav> -->
+    <!-- UI Change? -->
     <div id="mainpage">
             <nav id="navbar">
                     <div class="container">
