--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-    <!-- <nav id="navbar">
+    <nav id="navbar">
         <div class="container">
             <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
             <ul>
@@ -22,10 +22,10 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-    </nav> -->
+    </nav>
     <!-- UI Change? -->
     <div id="mainpage">
-            <nav id="navbar">
+            <!-- <nav id="navbar">
                     <div class="container">
                         <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
                         <ul>
@@ -35,7 +35,7 @@
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
-                </nav>
+                </nav> -->
         <div class="container">
             <div class="mainpage-content">
                 <h1> <span class="text-primary">Innovative</span> Development</h1>
@@ -45,6 +45,10 @@
         </div>
     </div>
     </header>
+    <section id="homeinfo" class="bg-dark">
+
+
+    </section>
 
 </body>
 </html>
