--- a/services.html
+++ b/services.html
@@ -38,7 +38,20 @@
             </nav>
         <div class="container">
             <div class="aboutpage-content">
-                //Content
+                <div class="row">
+                    <div class="column" style="background-color:#6A3805">
+                      <h2>Bronze</h2>
+                      <p>$15</p>
+                    </div>
+                    <div class="column" style="background-color:#D7D7D7;">
+                      <h2>Silver</h2>
+                      <p>$20</p>
+                    </div>
+                    <div class="column" style="background-color:#ffdd03;">
+                      <h2>Gold</h2>
+                      <p>$30</p>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
