--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a class="current" href="#">About</a></li>
+                            <li><a  class="current"  href="about.html">About</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
