--- a/contact.html
+++ b/contact.html
@@ -24,21 +24,20 @@
         </div>
     </nav> -->
     <!-- UI Change? -->
-    <div id="contactpage">
-            <nav id="navbar">
-                    <div class="container">
-                        <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a  href="about.html">About</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a  class="current" href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-            </nav>
-        <div class="container">
+    <div id="aboutpage">
+        <nav id="navbar">
+                <div class="container">
+                    <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a  href="services.html">Services</a></li>
+                        <li><a class="current" href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+        </nav>
             <div class="contactpage-content">
-                
+
                   </div>
             </div>
         </div>
