--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 </head>
 <body>
     <header>
-    <nav id="navbar">
-        <div class="container">
-            <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
-            <ul>
-                <li><a class="current" href="#">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+        <div id="aboutpage">
+            <nav id="navbar">
+                    <div class="container">
+                        <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
+                        <ul>
+                            <li><a class="current" href="index.html">Home</a></li>
+                            <li><a  href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+            </nav>
     <!-- UI Change? -->
     <div id="mainpage">
             <!-- <nav id="navbar">
