--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div id="aboutpage">
+        <!-- <div id="aboutpage">
             <nav id="navbar">
                     <div class="container">
                         <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
@@ -22,11 +22,12 @@
                             <li><a href="services.html">Services</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
-                    </div>
-            </nav>
+                    </div> -->
+           
     <!-- UI Change? -->
     <div id="mainpage">
-            <!-- <nav id="navbar">
+       
+            <nav id="navbar">
                     <div class="container">
                         <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
                         <ul>
@@ -36,7 +37,7 @@
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
-                </nav> -->
+                </nav>
         <div class="container">
             <div class="mainpage-content">
                 <h1> <span class="text-primary">Innovative</span> Development</h1>
@@ -50,6 +51,9 @@
 
 
     </section>
+    <footer class="mainfooter">
+            <p id="copyright">TWD &copy; 2019</p>
+        </footer>
 
 </body>
 </html>
