--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
     </nav> -->
     <!-- UI Change? -->
     <div id="aboutpage">
-        <nav id="navbar">
+        <nav id="navbarContact">
                 <div class="container">
-                    <h1 class="logo"><a href="#"><strong>TWD</strong></a></h1>
+                    <h1 class="logo"><a href="index.html"><strong>TWD</strong></a></h1>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
@@ -48,7 +48,7 @@
         <div class="container">
             <h1><span class="text-primary">Contact</span> Us</h1>
             <p>Please Fill Out The Form Below To Contact Our Team</p>
-            <form action="process.js">
+            <form>
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name">
@@ -61,7 +61,7 @@
                     <label for="message">Message</label>
                     <textarea name="message" id="message"></textarea>
                 </div>
-                <button type="submit" class="btn">Submit</button>
+<button id="submit" onclick="window.open('contact.html','_blank')" type="submit" class="btn">Submit</button>
             </form>
         </div>
 
@@ -69,7 +69,7 @@
     <br>
     <br>
     <footer class="mainfooter">
-        <p>TWD &copy; 2019</p>
+        <p id="copyright">TWD &copy; 2019</p>
     </footer>
 
 </body>
